# Zephyr_Project

./: CMakeLists.txt  Instructions.md  Instructions.txt  Notes.md  README.md  TODO.md  ToDO.txt  app.overlay  instructions.txt  prj.conf
drivers/sensor/: tsl2591.c  tsl2591.h
drivers/sensor/tsl2591/: tsl2591.h
exercises/gpio/blinky/: main.c
exercises/gpio/button/: main.c
exercises/sdk_exercises/lesson1/exercise2/: main.c  prj,conf
exercises/threads/thread-sleep/: main.c
exercises/threads/thread-start-define/: main.c
exercises/threads/thread_abort/: main.c
exercises/threads/threads-start/: main.c
modules/sensor/drivers/tsl2591/: Kconfig  tsl2591.c  tsl2591.h
modules/sensor/dts/bindings/sensor/: adafruit,tsl2491.yaml
modules/sensor/zephyr/: module.yaml
src/: main.c
